# curry-vision

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark_2025-09-02_16-48-22.txt  benchmark_2025-09-04_10-26-49.txt  benchmark_2025-09-04_11-13-50.txt  benchmark_2025-09-05_16-40-36.txt
include/curryvision/: ball_detector.hpp  types.hpp  video_source.hpp  video_stream.hpp
performance/: benchmark_2025-09-02_16-05-08.txt  benchmark_2025-09-02_16-13-25.txt  benchmark_2025-09-02_16-48-37.txt  benchmark_2025-09-02_17-06-34.txt  benchmark_2025-09-04_10-15-24.txt  benchmark_2025-09-04_10-25-38.txt  benchmark_2025-09-04_11-14-27.txt  benchmark_2025-09-04_12-38-05.txt  benchmark_2025-09-04_13-28-56.txt  benchmark_2025-09-05_15-07-45.txt
src/: ball_detector.cpp  main.cpp  types.cpp  video_source.cpp  video_stream.cpp
